Fixed a bug where there is a gap for fullwidth content areas between the content and header.

--- a/assets/less/layout.less
+++ b/assets/less/layout.less
@@ -16,7 +16,7 @@
 }
 
 .waterfall-fullwidth-content {
-    .main-content {
+    .main-content, .main-header.components-image-background ~ .main-content {
         padding: 0;
     }
 }
